--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="navbar">
-        <img src="/AV1-Desenvolvimento-Web/img/logo.png" alt="" style="width: 250px; height: 50px; margin-left: 1rem;">
+        <img src="/img/logo.png" alt="" style="width: 250px; height: 50px; margin-left: 1rem;">
         <div class="button">
             <a href="">
                 <h2>Cadastro</h2>
@@ -24,13 +24,38 @@
         </div>
     </div>
     <div class="content">
-        <div class="content-img">
-            <img src="/AV1-Desenvolvimento-Web/img/caribe-ilhas-mais-visitadas-3.png" width="900px" alt="">
+        <div class="form">
+            <div class="title">
+                <h1>Cadastre-se</h1>
+            </div>
+            <div class="form-1"> Nome <input type="text">
+                E-mail <input type="text"></div>
+            <div class="form-2"> Senha <input type="text">
+                Confirmar senha<input type="text"></div>
+            <div class="form-3"> Data de nascimento <input type="datetime-local">
+                CPF <input type="number">
+                Endereço <input type="text">
+            </div>
         </div>
     </div>
-    
-    <div class="footer">
 
+    <div class="footer">
+        
+        <div class="footer-left">
+            <div>
+                <p>SENAI - Desenvolvimento Web</p>
+                <p>3° Semestre - 2024</p>
+                <p>Professor: Bruno Bandeira</p>
+            </div>
+        </div>
+        <img src="/img/senai-165.png" alt="logo footer" style="width: 200px; height: 200px; margin: 1rem;">
+        <div class="footer-right">
+            <h2>Alunos</h2>
+                <p>Bruno Mozer</p>
+                <p>Eduardo Viana </p>
+                <p>Igor Zanin</p>
+
+        </div>
     </div>
 </body>
 
