--- a/home/index.html
+++ b/home/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="navbar">
-        <img src="/AV1-Desenvolvimento-Web/img/logo.png" alt="" style="width: 250px; height: 50px; margin-left: 1rem;">
+        <img src="/img/logo.png" alt="" style="width: 250px; height: 50px; margin-left: 1rem;">
         <div class="button">
             <a href="">
                 <h2>Cadastro</h2>
@@ -25,7 +25,7 @@
     </div>
     <div class="content">
         <div class="content-img">
-            <img src="/AV1-Desenvolvimento-Web/img/caribe-ilhas-mais-visitadas-3.png" width="900px" alt="">
+            <img src="/img/caribe-ilhas-mais-visitadas-3.png" width="900px" alt="">
         </div>
     </div>
     
