--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -12,13 +12,13 @@
     <div class="navbar">
         <img src="/img/logo.png" alt="" style="width: 250px; height: 50px; margin-left: 1rem;">
         <div class="button">
-            <a href="">
-                <h2>Cadastro</h2>
+            <a href="/home/index.html">
+                <h2>Home</h2>
             </a>
-            <a href="">
+            <a href="/produtos/produtos.html">
                 <h2>Produtos</h2>
             </a>
-            <a href="">
+            <a href="/sobre/sobre.html">
                 <h2>Sobre</h2>
             </a>
         </div>
