--- a/produtos/produtos.html
+++ b/produtos/produtos.html
@@ -12,9 +12,9 @@
     <div class="navbar">
         <img src="../img/logo.png" alt="" style="width: 250px; height: 50px; margin-left: 1rem;">
         <div class="button">
-            <a href="/AV1-Desenvolvimento-Web/home/index.html"><h2>Home</h2></a>
-            <a href="/AV1-Desenvolvimento-Web/cadastro/cadastro.html"><h2>Cadastro</h2></a>
-            <a href="/AV1-Desenvolvimento-Web/sobre/sobre.html"><h2>Sobre</h2></a>
+            <a href="/home/index.html"><h2>Home</h2></a>
+            <a href="/cadastro/cadastro.html"><h2>Cadastro</h2></a>
+            <a href="/sobre/sobre.html"><h2>Sobre</h2></a>
         </div>
     </div>
     <main>
@@ -104,7 +104,22 @@
     </main>
 
     <div class="footer">
+        
+        <div class="footer-left">
+            <div>
+                <p>SENAI - Desenvolvimento Web</p>
+                <p>3° Semestre - 2024</p>
+                <p>Professor: Bruno Bandeira</p>
+            </div>
+        </div>
+        <img src="/img/senai-165.png" alt="logo footer" style="width: 200px; height: 200px; margin: 1rem;">
+        <div class="footer-right">
+            <h2>Alunos</h2>
+                <p>Bruno Mozer</p>
+                <p>Eduardo Viana </p>
+                <p>Igor Zanin</p>
 
+        </div>
     </div>
 </body>
 
