--- a/home/index.html
+++ b/home/index.html
@@ -10,16 +10,62 @@
 
 <body>
     <div class="navbar">
-        <img src="/img/logo.png" alt="" style="width: 250px; height: 50px; margin-left: 1rem;">
+        <img src="../img/logo.png" alt="" style="width: 250px; height: 50px; margin-left: 1rem;">
         <div class="button">
             <a href=""><h2>Cadastro</h2></a>
             <a href=""><h2>Produtos</h2></a>
             <a href=""><h2>Sobre</h2></a>
         </div>
     </div>
-    <div class="content">
-        <h1></h1>
-    </div>
+    <main>
+        <div class="imagens">
+            <img src="../img/bali.jpg" alt="Imagem 2" class="imagem">
+            <img src="../img/paris.jpg" alt="Imagem 1" class="imagem">
+            <img src="../img/machupichu.jpg" alt="Imagem 1" class="imagem">
+            <img src="../img/ilhasgalapagos.jpg" alt="Imagem 1" class="imagem">
+        </div>
+        <section class="container-imagem-texto">
+          <h1>Bem vindo!</h1>  
+          <br>
+          <h2>Descubra o Mundo com a MarAzul</h2>
+          <p>Viajar é muito mais do que simplesmente visitar um lugar diferente. É uma oportunidade de se conectar com novas culturas, experimentar sabores autênticos, criar memórias inesquecíveis e ampliar seus horizontes. A MarAzul te ajuda a transformar seus sonhos em viagens inesquecíveis, seja você um aventureiro experiente, um casal em busca de romance ou uma família que deseja se divertir junta.
+
+            Com uma vasta experiência no mercado de turismo, oferecemos uma ampla variedade de destinos para todos os gostos e orçamentos. Você pode explorar as paisagens exuberantes do Brasil, conhecer as cidades vibrantes da Europa, relaxar nas praias paradisíacas do Caribe ou se aventurar nos safaris emocionantes da África.
+
+          </p>
+          <h2>Destinos Incríveis para Todos os Gostos</h2>
+          <p>Viaje para lugares paradisíacos, cidades vibrantes, paisagens naturais exuberantes e muito mais! Descubra pacotes de viagem para todos os gostos e orçamentos.</p>
+          <h2>Destinos Incríveis para Todos os Gostos</h2>
+    <p>Viaje para lugares paradisíacos, cidades vibrantes, paisagens naturais exuberantes e muito mais! Descubra pacotes de viagem para todos os gostos e orçamentos.</p>
+  
+    <ul>
+      <li>
+        <a href="#">
+          <h3>1. Bali, Indonésia:</h3>
+          <p>Paisagens vulcânicas deslumbrantes, praias paradisíacas, cultura rica e espiritualidade profunda. Desfrute de surf, mergulho, yoga, visita aos templos e muito mais. 1</p>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <h3>2. Paris, França:</h3>
+          <p>A Cidade Luz encanta com sua arquitetura clássica, museus renomados, gastronomia deliciosa e atmosfera romântica. Visite a Torre Eiffel, o Louvre, o Museu d'Orsay e explore os charmosos bairros da cidade.</p>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <h3>3. Machu Picchu, Peru:</h3>
+          <p>Uma cidadela Inca mística e imponente, localizada no topo de uma montanha nos Andes. Aventure-se em trilhas, explore as ruínas e admire a vista breathtaking.</p>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <h3>4. Ilhas Galápagos, Equador:</h3>
+          <p>Um arquipélago único com fauna e flora endêmicas, como tartarugas gigantes, iguanas e leões marinhos. Ideal para observar a vida selvagem, mergulhar e praticar snorkel.</p>
+        </a>
+      </li>
+    </ul>
+        </section>
+      </main>
 
     <div class="footer">
 
